<resources>

<!--    Kavach default strings.-->
    <string name="app_name">Kavach</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

<!--    Navigation bar strings.-->
    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_manual">Manual</string>

<!--    Tutorial fragment strings.-->
    <string name="tutorial_1">Kavach ensures peace of mind during emergencies by instantly alerting your loved ones with an SOS message..</string>
    <string name="tutorial_2">Activate the dedicated SOS button on the home screen of Kavach to swiftly send emergency messages to your chosen contacts.</string>
    <string name="tutorial_3">Easily add emergency contacts by tapping the "Add Emergency Contacts" button on the home screen. These contacts will receive SOS messages when activated..</string>
    <string name="tutorial_4">Kavach features speech recognition that responds to a trigger word. Select your trigger word from the drop-down menu, tap enable, and experience voice-activated SOS messaging.</string>
    <string name="tutorial_5">When you trigger the SOS button, Kavach captures photos using both front and back cameras. These photos are sent via SMS to your chosen contacts, providing them with visual context.</string>
    <string name="tutorial_6">Add a convenient SOS widget to your mobile home screen. This widget functions as an immediate SOS button, ensuring a rapid response in critical situations.</string>
    <string name="tutorial_7">Kavach shares your accurate live location via SMS to facilitate quick assistance, enabling your contacts to locate you swiftly.</string>
    <string name="tutorial_8">Enhance your safety by adding essential personal details to the profile section of Kavach, ensuring responders have the information they need.</string>
    <string name="tutorial_9">Explore Kavach emergency numbers feature for instant access to crucial helpline numbers during times of distress.</string>
    <string name="tutorial_10">Kavach: Your Safety Companion</string>
    <string name="tutorial_11">Quick SOS Activation</string>
    <string name="tutorial_12">Adding Emergency Contacts</string>
    <string name="tutorial_13">Voice-Activated SOS</string>
    <string name="tutorial_14">Visual SOS Alerts</string>
    <string name="tutorial_15">Home Screen Widget</string>
    <string name="tutorial_16">Precise Live Location Sharing</string>
    <string name="tutorial_17">Personalized Profile</string>
    <string name="tutorial_18">Access to Emergency Helpline Numbers</string>


<!--    Home screen strings.-->
    <string name="sos_image">SOS Image</string>
    <string name="emergency_contacts">Add Emergency Contacts</string>
    <string name="speech_recognition">Speech Recognition</string>
    <string name="speech_enable">Enable</string>
    <string name="speech_disable">Disable</string>
    <string name="lock_screen">Custom Lock Screen</string>
    <string name="todo">TODO</string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>

<!--    Speech recognition window strings.-->
    <string name="DropDown_Hint">Select Trigger Word</string>
    <string name="vrHeading">Detects a trigger word and sends SOS Message</string>
    <string name="vrDescription">Easily trigger an SOS message by setting a trigger word. Once detected, your app will automatically send an SOS message to selected contacts with your live location, even when the app is running in the background or the phone is locked</string>
    <string name="vrFooter">Stay safe 24/7 with this powerful feature</string>]

<!--    About fragment strings.-->
    <string name="aboutHead">About Kavach</string>
    <string name="aboutHead2">Key Features :</string>
    <string name="aboutHead3">1) Quick SOS Messages :</string>
    <string name="aboutHead5">2) Speech Recognition :</string>
    <string name="aboutHead7">3) Customizable Lock Screen (Upcoming) :</string>
    <string name="aboutHead8">Our team is currently developing a customizable lock screen feature. This will help you to set custom pin and pattern in your lock screen, allowing you to send SOS Message and current location from lock screen itself, making it faster and easier to send SOS Message and current location.</string>
    <string name="aboutHead9">Our Commitment :</string>
    <string name="aboutHead11">Stay Connected :</string>
    <string name="aboutHead12">If you have any questions or concerns, feel free to reach out to our support team. Download Kavach today and take control of your personal safety.</string>
    <string name="aboutHead10">Your safety is our top priority. We are dedicated to continuously enhancing and updating Kavach to provide you with the most effective and reliable safety tool. We value your feedback and encourage you to share your thoughts and suggestions as we strive to make your experience better every day.</string>
    <string name="aboutHead6">We have integrated advanced speech recognition technology into our app. Now, you will be able to activate the SOS feature just by speaking a trigger word, making it even easier to reach out for help when your hands are occupied.</string>
    <string name="aboutHead4">With a single press of a button, instantly send SOS messages to your designated emergency contacts. Your loved ones will be alerted of your distress and your live  location, ensuring swift assistance.</string>
    <string name="aboutHead1">Welcome to Kavach, your personal safety companion designed to provide you with peace of mind in any emergency situation. Our mission is to keep you safe and connected at all times.</string>
    <string name="manual">Manual</string>

<!--Speech recognition dropdown menu strings.-->
    <string-array name="trigger_words">
        <item>Alexa</item>
        <item>Americano</item>
        <item>Blueberry</item>
        <item>Bumblebee</item>
        <item>Computer</item>
        <item>Grapefruit</item>
        <item>Grasshopper</item>
        <item>Hey_Google</item>
        <item>Hey_Siri</item>
        <item>Jarvis</item>
        <item>Ok_Google</item>
        <item>PicoVoice</item>
        <item>Porcupine</item>
        <item>Terminator</item>
    </string-array>

    <!--    App widget strings.-->
    <string name="appwidget_text">Kavach</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Tap the widget icon to send SOS.</string>

</resources>