<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".ui.home.HomeFragment">

    <ImageButton
        android:id="@+id/SOSButton"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/sos_image"
        android:onClick="SOS"
        android:padding="20dp"
        android:scaleType="centerInside"
        android:src="@drawable/button_ring"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/EmergencyContactButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/custom_button"
        android:drawableRight="@drawable/baseline_keyboard_double_arrow_right_24"
        android:onClick="EmergencyContactsActivity"
        android:paddingStart="20dp"
        android:text="@string/emergency_contacts"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/VoiceRecognitionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SOSButton"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/VoiceRecognitionButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:onClick="VoiceRecogntionActivity"
        android:background="@drawable/custom_button"
        android:drawableRight="@drawable/baseline_keyboard_double_arrow_right_24"
        android:paddingStart="20dp"
        android:text="@string/speech_recognition"
        app:layout_constraintBottom_toTopOf="@+id/LockScreenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmergencyContactButton"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/LockScreenButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:onClick="LockScreenActivity"
        android:drawableRight="@drawable/baseline_keyboard_double_arrow_right_24"
        android:paddingStart="20dp"
        android:text="@string/lock_screen"
        android:textSize="16sp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VoiceRecognitionButton"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/alata"
        android:textAlignment="center"
        android:textColor="@color/disable_startbuttton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

</androidx.constraintlayout.widget.ConstraintLayout>